替换Swagger注解，功能基本完成